# myLibrary

./: FileProperties.cpp  FileProperties.h  Makefile.am  README  README.md  configure.ac  utility_library.cpp  utility_library.h  wilkasUtilityLib.pc.in
